envs + full dockerization

--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,55 @@
+# ======================
+# General / Front / API
+# ======================
+FRONTEND_CONTAINER=
+API_CONTAINER=
+FRONTEND_URL=
+BACKEND_URL=
+FRONTEND_PORT=
+BACKEND_PORT=
+API_PORT=
+
+# ======================
+# Postgres
+# ======================
+POSTGRES_PORT=5432
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=druid
+
+# ======================
+# Zookeeper
+# ======================
+ZOOKEEPER_PORT=2181
+ZOO_MY_ID=1
+
+# ======================
+# Druid (micro quickstart)
+# ======================
+DRUID_VERSION=27.0.0
+DRUID_SINGLE_NODE_CONF=micro-quickstart
+DRUID_SHARED_VOLUME=druid_shared
+DRUID_COORDINATOR_PORT=8081
+DRUID_BROKER_PORT=8082
+DRUID_HISTORICAL_PORT=8083
+DRUID_MIDDLEMANAGER_PORT=8091
+DRUID_MIDDLEMANAGER_WORKER_PORTS=8100-8199
+DRUID_ROUTER_PORT=8888
+DRUID_HOST=http://router:8888
+
 # Java tuning
-#DRUID_XMX=
-#DRUID_XMS=
-#DRUID_MAXNEWSIZE=
-#DRUID_NEWSIZE=
-#DRUID_MAXDIRECTMEMORYSIZE=
-DRUID_SINGLE_NODE_CONF=
+# (descomentá y ajustá según recursos disponibles)
+# DRUID_XMX=1g
+# DRUID_XMS=1g
+# DRUID_MAXNEWSIZE=250m
+# DRUID_NEWSIZE=250m
+# DRUID_MAXDIRECTMEMORYSIZE=6172m
 
-druid_emitter_logging_logLevel=
-
-druid_extensions_loadList=
+# ======================
+# Druid internals
+# ======================
+druid_emitter_logging_logLevel=debug
+druid_extensions_loadList=["druid-histogram", "druid-datasketches", "druid-lookups-cached-global", "postgresql-metadata-storage", "druid-multi-stage-query"]
 
 druid_zk_service_host=zookeeper
 
@@ -18,17 +59,18 @@ druid_metadata_storage_connector_connectURI=
 druid_metadata_storage_connector_user=
 druid_metadata_storage_connector_password=
 
-druid_indexer_runner_javaOptsArray=
-druid_indexer_fork_property_druid_processing_buffer_sizeBytes=
+druid_indexer_runner_javaOptsArray=["-server", "-Xmx1g", "-Xms1g", "-XX:MaxDirectMemorySize=3g", "-Duser.timezone=UTC", "-Dfile.encoding=UTF-8", "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager"]
+druid_indexer_fork_property_druid_processing_buffer_sizeBytes=256MiB
 
-druid_storage_type=
-druid_storage_storageDirectory=
-druid_indexer_logs_type=
-druid_indexer_logs_directory=
+druid_storage_type=local
+druid_storage_storageDirectory=/opt/shared/segments
+druid_indexer_logs_type=file
+druid_indexer_logs_directory=/opt/shared/indexing-logs
 
-druid_processing_numThreads=
-druid_processing_numMergeBuffers=
+druid_processing_numThreads=2
+druid_processing_numMergeBuffers=2
 
-DRUID_LOG4J=
-
-DRUID_HOST=http://router:8888
+# ======================
+# Logging XML
+# ======================
+DRUID_LOG4J=<?xml version="1.0" encoding="UTF-8"?><Configuration status="WARN"><Appenders><Console name="Console" target="SYSTEM_OUT"><PatternLayout pattern="%d{ISO8601} %p [%t] %c - %m%n"/></Console></Appenders><Loggers><Root level="info"><AppenderRef ref="Console"/></Root><Logger name="org.apache.druid.jetty.RequestLog" additivity="false" level="DEBUG"><AppenderRef ref="Console"/></Logger></Loggers></Configuration>
