--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,46 +10,46 @@ volumes:
   druid_shared: {}
 
 services:
-  # Base de datos para Druid
+  # --- PostgreSQL ---
   postgres:
     container_name: postgres-druid
     image: postgres:17
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - metadata_data:/var/lib/postgresql
     environment:
-      - POSTGRES_PASSWORD=FoolishPassword
-      - POSTGRES_USER=druid
-      - POSTGRES_DB=druid
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
 
-  # Zookeeper
+  # --- Zookeeper ---
   zookeeper:
     container_name: zookeeper
     image: zookeeper:3.5.10
     ports:
-      - "2181:2181"
+      - "${ZOOKEEPER_PORT}:${ZOOKEEPER_PORT}"
     environment:
-      - ZOO_MY_ID=1
+      - ZOO_MY_ID=${ZOO_MY_ID}
 
-  # Druid coordinator
+  # --- Druid coordinator ---
   coordinator:
-    image: apache/druid:34.0.0
+    image: apache/druid:${DRUID_VERSION}
     container_name: coordinator
     volumes:
-      - druid_shared:/opt/shared
+      - ${DRUID_SHARED_VOLUME}:/opt/shared
       - coordinator_var:/opt/druid/var
     depends_on:
       - zookeeper
       - postgres
     ports:
-      - "8081:8081"
+      - "${DRUID_COORDINATOR_PORT}:${DRUID_COORDINATOR_PORT}"
     command: ["coordinator"]
     env_file:
       - .env
 
   broker:
-    image: apache/druid:34.0.0
+    image: apache/druid:${DRUID_VERSION}
     container_name: broker
     volumes:
       - broker_var:/opt/druid/var
@@ -58,46 +58,46 @@ services:
       - postgres
       - coordinator
     ports:
-      - "8082:8082"
+      - "${DRUID_BROKER_PORT}:${DRUID_BROKER_PORT}"
     command: ["broker"]
     env_file:
       - .env
 
   historical:
-    image: apache/druid:34.0.0
+    image: apache/druid:${DRUID_VERSION}
     container_name: historical
     volumes:
-      - druid_shared:/opt/shared
+      - ${DRUID_SHARED_VOLUME}:/opt/shared
       - historical_var:/opt/druid/var
     depends_on:
       - zookeeper
       - postgres
       - coordinator
     ports:
-      - "8083:8083"
+      - "${DRUID_HISTORICAL_PORT}:${DRUID_HISTORICAL_PORT}"
     command: ["historical"]
     env_file:
       - .env
 
   middlemanager:
-    image: apache/druid:34.0.0
+    image: apache/druid:${DRUID_VERSION}
     container_name: middlemanager
     volumes:
-      - druid_shared:/opt/shared
+      - ${DRUID_SHARED_VOLUME}:/opt/shared
       - middle_var:/opt/druid/var
     depends_on:
       - zookeeper
       - postgres
       - coordinator
     ports:
-      - "8091:8091"
-      - "8100-8105:8100-8105"
+      - "${DRUID_MIDDLEMANAGER_PORT}:${DRUID_MIDDLEMANAGER_PORT}"
+      - "${DRUID_MIDDLEMANAGER_WORKER_PORTS}:${DRUID_MIDDLEMANAGER_WORKER_PORTS}"
     command: ["middleManager"]
     env_file:
       - .env
 
   router:
-    image: apache/druid:34.0.0
+    image: apache/druid:${DRUID_VERSION}
     container_name: router
     volumes:
       - router_var:/opt/druid/var
@@ -106,19 +106,19 @@ services:
       - postgres
       - coordinator
     ports:
-      - "8888:8888"
+      - "${DRUID_ROUTER_PORT}:${DRUID_ROUTER_PORT}"
     command: ["router"]
     env_file:
       - .env
 
-  # API NestJS
+  # --- API (NestJS) ---
   analytics-api:
-    container_name: analytics-api
+    container_name: ${API_CONTAINER}
     build:
       context: ./analytics-api
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "${API_PORT}:${API_PORT}"
     env_file:
       - .env
     depends_on:
@@ -130,16 +130,18 @@ services:
     command: npm run start:dev
     working_dir: /usr/src/app
 
-  # FRONTEND
+  # --- FRONTEND (Angular) ---
   frontend:
-    container_name: analytics-frontend
+    container_name: ${FRONTEND_CONTAINER}
     build:
       context: ./analytics-dashboard
       dockerfile: Dockerfile
     ports:
-      - "4200:4200"
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     depends_on:
       - analytics-api
     volumes:
       - ./analytics-dashboard:/usr/src/app
       - /usr/src/app/node_modules
+    env_file:
+      - .env
